--- a/css/style.css
+++ b/css/style.css
@@ -144,7 +144,7 @@ a {
     font-size: 2.5rem;
     font-weight: 700;
     margin-bottom: 8px;
-    line-height: 1.2;
+    line-height: 1.44;
 }
 .main_copy h1 {
     font-size: 4rem;
@@ -188,7 +188,7 @@ a {
     display: block;
 }
 #strengths {
-    padding: 71px 0 18px;
+    padding: 64px 0 18px;
     background-color: rgba(13,150,160,0.102);
     width: 100%;
 }
@@ -289,7 +289,7 @@ a {
   display: none; 
 }
 #service {
-    padding: 71px 0 59px;
+    padding: 63px 0 59px;
     width: 100%;
 }
 .service-with-images {
@@ -358,7 +358,7 @@ a {
 .news-with-images {
     display: flex;
     gap: 20px;
-    margin-bottom: 48px;
+    margin-bottom: 46px;
     align-items: center;
     justify-content: center;
 }
@@ -379,7 +379,7 @@ a {
     border-top: 1px solid #707070; 
 }
 .news-item  {
-    padding: 15px 0;
+    padding: 14.5px 0;
     border-bottom: 1px solid #707070;
     display: grid;   
 }
@@ -398,7 +398,6 @@ a {
     font-weight: 700;
     margin-left: 18.5px;
     font-size: 1.7rem;
-  
     line-height: 1.47;  
 }
 .news-title {
@@ -422,7 +421,7 @@ a {
 }
 .access-with-images {
     display: flex;
-    gap: 16px;
+    gap: 20px;
     margin-bottom: 46px;
     align-items: center;
     justify-content: center;
@@ -472,7 +471,7 @@ a {
 }
 .address  {
     font-size: 1.8rem;
-    line-height: 27px;
+    line-height: 1.5;
     font-weight: 500;
 }
 .access-contact {
@@ -482,7 +481,7 @@ a {
     border-top: solid 1px #707070;
     border-bottom: solid 1px #707070;
     padding: 15px 0 14px;
-    margin-top: 27px;
+    margin: 27px 0 0 4px;
 }
 .access-hours p {
     margin: 0;
@@ -491,28 +490,28 @@ a {
     font-size: 1.8rem;
 }
 .contact-info {
-  display: flex;
-  gap: 0.8rem;        
-  align-items: center;
-  flex-wrap: wrap;   
-  margin-top: 14px;
+    display: flex;
+    gap: 8px;        
+    align-items: center;
+    flex-wrap: wrap;   
+    margin-top: 14px;
 }
 .contact-info .contact-item {
-  margin: 0;
-  display: flex;      
-  gap: 0.4rem;
-  align-items: center;
-  white-space: nowrap; 
-  font-size: 1.8rem;
+    margin: 0;
+    display: flex;      
+    line-height: 1.5;
+    align-items: center;
+    white-space: nowrap; 
+    font-size: 1.8rem;
 }
 .contact-info .number {
-  display: inline-block;
-  color: #0D96A0;
-  line-height: 1.6;
-  font-weight: 700;
-  font-size: 2.5rem;
-  transition: opacity 0.3s ease;
-  pointer-events: none;
+    display: inline-block;
+    color: #0D96A0;
+    line-height: 1.6;
+    font-weight: 700;
+    font-size: 2.5rem;
+    transition: opacity 0.3s ease;
+    pointer-events: none;
 }
 .contact-info .number:hover {
     opacity: 0.7;
@@ -521,13 +520,13 @@ a {
     opacity: 1;
 }
 #contact {
-    padding: 70px 0 80px;
+    padding: 62px 0 80px;
     background-color: rgba(13,150,160,0.102);
     width: 100%;
 }
 .contact-with-images {
     display: flex;
-    gap: 16px;
+    gap: 20px;
     align-items: center;
     justify-content: center;
 }
@@ -567,7 +566,7 @@ a {
     font-weight: 700;
     width: 160px;
     color: #505050;  
-    margin-top: 10px;
+    margin-top: 7px;
     line-height: 1.65;
 }
 input[type="text"],
@@ -663,7 +662,7 @@ input[type="submit"]:hover {
 }
 .footer_sns {
     display: flex;
-    margin-top: 9px;
+    margin-top: 8px;
     list-style: none;
     justify-content: center; 
     padding: 0;
@@ -688,6 +687,16 @@ input[type="submit"]:hover {
     .pc_none{
         display: none!important;
     }  
+    .header .container {
+        white-space: nowrap;
+    }
+    .message img {
+        width: 83.75px;
+        position: absolute;
+        right: 10.24px;
+        bottom: 13.88px;
+        display: block;
+    }
     .sp-only {
         display: block;
     }
@@ -730,7 +739,7 @@ input[type="submit"]:hover {
         display: block;
     }
     .main_copy {
-        padding: 18px 14px;
+        padding: 18px 20px;
         bottom: 0;  
         top: auto;
         transform: none;
@@ -741,13 +750,12 @@ input[type="submit"]:hover {
     .main_copy p {
         font-size: 2rem;
         margin-bottom: 7px;
-        line-height: 1.2;
+        line-height: 1.44;
     }
     .main_copy h1 {
         font-size: 3rem;
         line-height: 1.33;
     }
-    
     .message {
         padding: 49px 0 39px;
     }
@@ -838,7 +846,7 @@ input[type="submit"]:hover {
         white-space: wrap;
         line-height: 1.875;
         text-align: left;
-         margin-bottom: 35px;
+        margin-bottom: 35px;
     }
     .br-sp {
         display: block;
@@ -888,11 +896,8 @@ input[type="submit"]:hover {
         display: inline;
     }
     #news {
-        padding: 43px 0;
+        padding: 43px 0 50px;
     }   
-    .news-with-images {
-        margin-bottom: 46px;
-    }
     .news-item {
         display: block;
         text-align: left;
@@ -900,11 +905,12 @@ input[type="submit"]:hover {
     }
     .news-item a {
         gap: 0;
+        grid-template-columns: none; 
     }
     .news-date {
         margin-left: 10px;
         font-size: 1.7rem;
-        line-height: 1.47;
+        line-height: 1.4;
         font-weight: 700;
         margin-bottom: 2px;
     }
@@ -927,11 +933,8 @@ input[type="submit"]:hover {
         font-weight: 500;
         line-height: 1.5;
     }
-    .news-item a {
-        grid-template-columns: none; 
-    }
     #access {
-        padding: 43px 0;
+        padding: 43px 0 50px;
     }
     .access-with-images {
         margin-bottom: 46px;
@@ -951,14 +954,27 @@ input[type="submit"]:hover {
         margin: 0 auto 30px;
     }
     .access-img-area iframe {
-        width: 100%;
-        height: 100%;
         aspect-ratio: 335 / 222;
     }
-    .number {
+    .contact-info {
+        margin: 0 0 14px;
+        gap: 5px;
+    }
+    .contact-info .tel {
+        font-size: 1.6rem;
+        line-height: 1.6;
+        font-weight: 500;
+    }
+    .contact-info .number {
         font-size: 2.5rem;
         font-weight: 700;
-        pointer-events: auto;
+        line-height: 1.6;
+        position: relative;
+        top:-3px;
+    }
+    .contact-item.mail {
+        font-size: 1.6rem;
+        line-height: 1.6;
     }
     .access-text-area h5 {
         margin: 0 0 12px 0;
@@ -968,10 +984,12 @@ input[type="submit"]:hover {
     }
     .post {
         font-size: 1.6rem;
+        line-height: 1.5;
     }
     .address {
         font-size: 1.6rem;
         display: inline-block;
+        line-height: 1.5;
     }
     .access-hours {
         padding: 12px 0 12px 0;
@@ -981,37 +999,34 @@ input[type="submit"]:hover {
     .access-hours .holiday {
         font-size: 1.6rem;
         font-weight: 500;
-        line-height: 1.875;
-    }
-    .contact-info {
-        margin: 0 0 14px;
+        line-height: 1.87;
     }
     #contact {
-        padding: 50px 0;
+        padding: 43px 0 50px;
     }
     .contact-with-images {
-        margin-bottom: 47px;
+        margin-bottom: 43px;
     }
     .section-desc {
         font-size: 1.6rem;
         text-align: left;
         margin-bottom: 34px;
         font-weight: 500;
+        line-height: 1.8;
     }
     .form_item {
         display: block;
-        margin-top: -5px;
     }
     .form_label {
         font-size: 1.8rem;
         line-height: 1.83;
         margin-bottom: 2px;
+        font-weight: 700;
     }
     input[type="text"]{
         width: 100%;
         height: 50px;
         margin-bottom: 17px;
-     
     }
     input[type="email"]{
         width: 100%;
@@ -1020,12 +1035,19 @@ input[type="submit"]:hover {
     }
     textarea {
         width: 100%;
+        margin-bottom: 50px;
+    }
+    .contact_button {
+        margin: 0;
+        width: 100%;
+        max-width: 335px;
     }
     .contact_button input[type="submit"] {
-        padding: 1px 0;
+        padding: 8px 7px;
         font-size: 2rem;
         height: 41px;
         color: #fff;
+        line-height: 1.3;
     } 
     input[type="submit"]:hover {
         color: #0D96A0;
@@ -1037,8 +1059,8 @@ input[type="submit"]:hover {
     .footer-nav_lists {
         flex-wrap: wrap; 
         justify-content: center; 
-   
-        line-height: 1.8;
+        line-height: 1.83;
+        column-gap: 20px;
     }
     .footer-nav_list a {
         font-size: 1.8rem;
@@ -1048,36 +1070,12 @@ input[type="submit"]:hover {
         font-size: 1.6rem;
         font-weight: 700;
         margin-top: 15px;
+        line-height: 2;
     }
     .footer_sns {
         margin-top: 28px;
         margin-bottom: 0;
     }
-    
-    }
-    .access-text-area {
-        font-family: "Noto Sans JP", sans-serif;
-        max-width: 768px;
-    }
-    .access-text-area p {
-        letter-spacing: 0;
-    }
-    
-    .access-text-area hr {
-        margin: 12px 0;
-        border: none;
-        border-top: 1px solid #ccc;
-    }
-    .access-with-images img {
-        width: 25.49px;
-        height: 25px;
-        display: block;
-    }
-    .access-with-images h3 {
-        font-size: 2.5rem ;
-        display: inline-block;
-        margin: 0 10px;
-        vertical-align: middle;
     }
 @media screen and (max-width: 320px){
     .main_copy {
@@ -1094,7 +1092,6 @@ input[type="submit"]:hover {
     .main_copy h1 {
         font-size: 2.84375rem;
         max-width: 100%;
-        line-height: 50px;
     }
     .br-sp {
         display: none;
@@ -1116,6 +1113,9 @@ input[type="submit"]:hover {
     }
     .news-item a {
         grid-template-columns: none; 
+    }
+    .news-item p {
+        white-space: wrap;
     }
     .address-text .post,
     .address-text .address {
